--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@
   --primary-color: #019EBB;
   --primary-color-rgb: 1, 158, 187;
   --primary-hover: #028BAB;
+  --primary-dark: #02728d;
   --accent-color: #4142D0;
 
   /* Surface and text */
